--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@babel/node": "^7.24.7",
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^3.0.0",
     "jose": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "jsrsasign": "^11.1.0",
@@ -21,6 +23,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "text-encoding": "^0.7.0",
+    "util": "^0.12.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -42,15 +45,24 @@
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.3.1",
     "node-fetch": "^3.3.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "whatwg-fetch": "^3.6.20"
   },
   "jest": {
     "testEnvironment": "jsdom",
     "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
+      "<rootDir>/jest.setup.js"
     ],
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "testEnvironmentOptions": {
+      "customExportConditions": [
+        ""
+      ]
+    },
     "moduleNameMapper": {
-      "\\.(css|less|scss|sss|styl)$": "identity-obj-proxy"
+      "\\.(css|jsx|styl)$": "identity-obj-proxy"
     },
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/"
